fixed swagger and env, wrote readme
